--- a/package.json
+++ b/package.json
@@ -26,6 +26,6 @@
   "engines" : {
     "node" : ">=0.10.3"
   },
-  "license": "OFL-1.1", "MIT", "CC-BY-3.0"
+  "license":[ "OFL-1.1", "MIT", "CC-BY-3.0"]
 }
 
